[tool.poetry]
name = "HW2-py.web"
version = "0.1.0"
description = ""
authors = ["Vlad96Kir <130667144+Vlad96Kir@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"